# cellos-acp

./: .gitignore  README.md  SMOKETEST.md  TODO.md  pyproject.toml
cellos_acp/: __init__.py  __main__.py  client.py  mcp_tools.py  registry.py  result.py  schemas.py
tests/: test_client.py  test_e2e.py
